fix dialog window backgrounds

--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -45,13 +45,12 @@
 
     <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/color_primary</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/theme_light_background_color</item>
     </style>
 
     <style name="MyDialogTheme.Dark" parent="Theme.AppCompat.Dialog">
         <item name="colorAccent">@color/color_primary</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:colorBackground">@color/theme_dark_background_color</item>
+        <item name="android:windowBackground">@color/theme_dark_background_color</item>
     </style>
 
     <style name="MyBorderlessBackgroundStyle">
