--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -20,6 +20,8 @@
     <dimen name="fastscroll_height">40dp</dimen>
     <dimen name="fingerprint_icon_size">72dp</dimen>
     <dimen name="fastscroll_bubble_offset">30dp</dimen>
+    <dimen name="fab_size">56dp</dimen>
+    <dimen name="secondary_fab_bottom_margin">92dp</dimen>
 
     <dimen name="dragselect_hotspot_height">56dp</dimen>
     <dimen name="selection_check_size">26dp</dimen>
