--- a/commons/src/main/res/layout/dialog_file_conflict.xml
+++ b/commons/src/main/res/layout/dialog_file_conflict.xml
@@ -50,6 +50,13 @@
             android:paddingBottom="@dimen/normal_margin"
             android:paddingTop="@dimen/normal_margin"
             android:text="@string/merge"/>
+        <com.simplemobiletools.commons.views.MyCompatRadioButton
+            android:id="@+id/conflict_dialog_radio_keep_both"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/normal_margin"
+            android:paddingTop="@dimen/normal_margin"
+            android:text="@string/keep_both"/>
 
     </RadioGroup>
 
