--- a/samples/src/main/res/layout/list_item.xml
+++ b/samples/src/main/res/layout/list_item.xml
@@ -19,6 +19,7 @@
         <TextView
             android:id="@+id/item_name"
             android:layout_width="match_parent"
+            android:textColor="#ffffff"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_margin"
             tools:text="An item"/>
