commons/src/main/res (+ AndroidManifest) (2/4)
Signed-off-by: Taco <SkytkRSfan3895@gmail.com>

--- a/commons/src/main/res/layout/filepicker_list_item.xml
+++ b/commons/src/main/res/layout/filepicker_list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_holder"
     android:layout_width="match_parent"
@@ -17,7 +16,7 @@
         android:layout_height="@dimen/normal_icon_size"
         android:layout_centerVertical="true"
         android:padding="@dimen/medium_margin"
-        android:src="@drawable/ic_folder"/>
+        android:src="@drawable/ic_folder" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,7 +32,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            tools:text="Directory"/>
+            tools:text="Directory" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/list_item_details"
@@ -43,6 +42,6 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="@dimen/smaller_text_size"
-            tools:text="1 KB"/>
+            tools:text="1 KB" />
     </RelativeLayout>
 </RelativeLayout>
