--- a/commons/src/main/res/layout/activity_about.xml
+++ b/commons/src/main/res/layout/activity_about.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/about_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +18,7 @@
             android:autoLink="web"
             android:text="@string/my_website"
             android:textColorLink="@color/color_primary"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_email"
@@ -27,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/about_website"
             android:text="@string/my_email"
-            android:textColorLink="@color/color_primary"/>
+            android:textColorLink="@color/color_primary" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_faq_label"
@@ -35,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/about_email"
             android:layout_marginTop="@dimen/activity_margin"
-            android:text="@string/before_asking_question"/>
+            android:text="@string/before_asking_question" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_faq"
@@ -44,7 +43,7 @@
             android:layout_below="@+id/about_faq_label"
             android:paddingBottom="@dimen/activity_margin"
             android:text="@string/frequently_asked_questions"
-            android:textColor="@color/color_primary"/>
+            android:textColor="@color/color_primary" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_upgrade_to_pro"
@@ -54,7 +53,7 @@
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:text="@string/upgrade_to_pro"
-            android:textColor="@color/color_primary"/>
+            android:textColor="@color/color_primary" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_more_apps"
@@ -64,7 +63,7 @@
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:text="@string/more_apps_underlined"
-            android:textColor="@color/color_primary"/>
+            android:textColor="@color/color_primary" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_invite"
@@ -74,7 +73,7 @@
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:text="@string/invite_friends_underlined"
-            android:textColor="@color/color_primary"/>
+            android:textColor="@color/color_primary" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_rate_us"
@@ -84,7 +83,7 @@
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:text="@string/rate_us_underlined"
-            android:textColor="@color/color_primary"/>
+            android:textColor="@color/color_primary" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_license"
@@ -94,7 +93,7 @@
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/activity_margin"
             android:text="@string/third_party_licences_underlined"
-            android:textColor="@color/color_primary"/>
+            android:textColor="@color/color_primary" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_follow_us"
@@ -103,14 +102,14 @@
             android:layout_below="@+id/about_license"
             android:paddingTop="@dimen/activity_margin"
             android:paddingBottom="@dimen/medium_margin"
-            android:text="@string/follow_us"/>
+            android:text="@string/follow_us" />
 
         <ImageView
             android:id="@+id/about_facebook"
             android:layout_width="@dimen/social_logo"
             android:layout_height="@dimen/social_logo"
             android:layout_below="@+id/about_follow_us"
-            android:src="@drawable/ic_facebook"/>
+            android:src="@drawable/ic_facebook" />
 
         <ImageView
             android:id="@+id/about_reddit"
@@ -121,7 +120,7 @@
             android:layout_marginRight="@dimen/medium_margin"
             android:layout_toEndOf="@+id/about_facebook"
             android:layout_toRightOf="@+id/about_facebook"
-            android:src="@drawable/ic_reddit"/>
+            android:src="@drawable/ic_reddit" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_copyright"
@@ -131,7 +130,7 @@
             android:layout_alignParentBottom="true"
             android:gravity="center_horizontal|bottom"
             android:paddingTop="@dimen/activity_margin"
-            android:text="v1.0\nCopyright © Simple Mobile Tools 2017"/>
+            android:text="v1.0\nCopyright © Simple Mobile Tools 2017" />
 
     </RelativeLayout>
 </ScrollView>
