--- a/commons/src/main/res/layout/activity_customization.xml
+++ b/commons/src/main/res/layout/activity_customization.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/customization_scrollview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -16,21 +15,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_margin"
             android:background="?attr/selectableItemBackground"
-            android:paddingBottom="@dimen/bigger_margin"
             android:paddingLeft="@dimen/activity_margin"
+            android:paddingTop="@dimen/bigger_margin"
             android:paddingRight="@dimen/activity_margin"
-            android:paddingTop="@dimen/bigger_margin">
+            android:paddingBottom="@dimen/bigger_margin">
 
             <com.simplemobiletools.commons.views.MyTextView
                 android:id="@+id/customization_theme_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/customization_theme"
                 android:layout_toStartOf="@+id/customization_theme"
+                android:layout_toLeftOf="@+id/customization_theme"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
-                android:text="@string/theme"/>
+                android:text="@string/theme" />
 
             <com.simplemobiletools.commons.views.MyTextView
                 android:id="@+id/customization_theme"
@@ -41,7 +40,7 @@
                 android:layout_marginEnd="@dimen/small_margin"
                 android:layout_marginRight="@dimen/small_margin"
                 android:background="@null"
-                android:clickable="false"/>
+                android:clickable="false" />
 
         </RelativeLayout>
 
@@ -61,7 +60,7 @@
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
-                android:text="@string/text_color"/>
+                android:text="@string/text_color" />
 
             <ImageView
                 android:id="@+id/customization_text_color"
@@ -71,7 +70,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="@dimen/medium_margin"
                 android:layout_marginRight="@dimen/medium_margin"
-                android:clickable="false"/>
+                android:clickable="false" />
 
         </RelativeLayout>
 
@@ -91,7 +90,7 @@
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
-                android:text="@string/background_color"/>
+                android:text="@string/background_color" />
 
             <ImageView
                 android:id="@+id/customization_background_color"
@@ -101,7 +100,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="@dimen/medium_margin"
                 android:layout_marginRight="@dimen/medium_margin"
-                android:clickable="false"/>
+                android:clickable="false" />
 
         </RelativeLayout>
 
@@ -121,7 +120,7 @@
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
-                android:text="@string/primary_color"/>
+                android:text="@string/primary_color" />
 
             <ImageView
                 android:id="@+id/customization_primary_color"
@@ -131,7 +130,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="@dimen/medium_margin"
                 android:layout_marginRight="@dimen/medium_margin"
-                android:clickable="false"/>
+                android:clickable="false" />
 
         </RelativeLayout>
 
@@ -151,7 +150,7 @@
                 android:layout_centerVertical="true"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
-                android:text="@string/app_icon_color"/>
+                android:text="@string/app_icon_color" />
 
             <ImageView
                 android:id="@+id/customization_app_icon_color"
@@ -161,7 +160,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="@dimen/medium_margin"
                 android:layout_marginRight="@dimen/medium_margin"
-                android:clickable="false"/>
+                android:clickable="false" />
 
         </RelativeLayout>
 
@@ -182,7 +181,7 @@
                 android:clickable="false"
                 android:padding="@dimen/activity_margin"
                 android:text="@string/apply_to_all_apps"
-                android:textSize="@dimen/normal_text_size"/>
+                android:textSize="@dimen/normal_text_size" />
 
         </RelativeLayout>
     </RelativeLayout>
