--- a/commons/src/main/res/layout/activity_license.xml
+++ b/commons/src/main/res/layout/activity_license.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/license_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,7 +15,7 @@
             android:id="@+id/license_notice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/notice"/>
+            android:text="@string/notice" />
 
     </LinearLayout>
 </ScrollView>
