--- a/commons/src/main/res/layout/breadcrumb_item.xml
+++ b/commons/src/main/res/layout/breadcrumb_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplemobiletools.commons.views.MyTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.simplemobiletools.commons.views.MyTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/breadcrumb_text"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/medium_margin"
     android:paddingLeft="@dimen/small_margin"
+    android:paddingTop="@dimen/medium_margin"
     android:paddingRight="@dimen/small_margin"
-    android:paddingTop="@dimen/medium_margin"/>
+    android:paddingBottom="@dimen/medium_margin" />
