--- a/commons/src/main/res/layout/dialog_color_picker.xml
+++ b/commons/src/main/res/layout/dialog_color_picker.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/color_picker_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/activity_margin"
-    android:layout_marginTop="@dimen/activity_margin">
+    android:layout_marginTop="@dimen/activity_margin"
+    android:layout_marginBottom="@dimen/activity_margin">
 
     <RelativeLayout
         android:id="@+id/color_picker_holder"
@@ -23,23 +22,23 @@
                 android:layout_width="@dimen/colorpicker_size"
                 android:layout_height="@dimen/colorpicker_size"
                 android:layout_centerVertical="true"
-                android:layerType="software"/>
+                android:layerType="software" />
 
             <ImageView
                 android:id="@+id/color_picker_hue"
                 android:layout_width="@dimen/colorpicker_hue_width"
                 android:layout_height="@dimen/colorpicker_size"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/medium_margin"
-                android:layout_toRightOf="@id/color_picker_square"
+                android:layout_marginStart="@dimen/medium_margin"
+                android:layout_toEndOf="@id/color_picker_square"
                 android:scaleType="fitXY"
-                android:src="@drawable/img_color_picker_hue"/>
+                android:src="@drawable/img_color_picker_hue" />
 
             <ImageView
                 android:id="@+id/color_picker_hue_cursor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_chevron_right"/>
+                android:src="@drawable/ic_chevron_right" />
 
             <ImageView
                 android:id="@+id/color_picker_cursor"
@@ -47,7 +46,7 @@
                 android:layout_height="@dimen/activity_margin"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
-                android:src="@drawable/color_picker_circle"/>
+                android:src="@drawable/color_picker_circle" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -61,45 +60,45 @@
                 android:layout_width="@dimen/colorpicker_color_width"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:layout_toLeftOf="@+id/color_picker_hex_arrow"
+                android:layout_toStartOf="@+id/color_picker_hex_arrow"
                 android:gravity="center"
-                android:textSize="@dimen/normal_text_size"/>
+                android:textSize="@dimen/normal_text_size" />
 
             <ImageView
                 android:id="@+id/color_picker_hex_arrow"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/colorpicker_items_height"
-                android:layout_alignBottom="@+id/color_picker_new_hex"
                 android:layout_alignTop="@+id/color_picker_new_hex"
+                android:layout_alignBottom="@+id/color_picker_new_hex"
                 android:layout_centerInParent="true"
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_arrow_right"/>
+                android:src="@drawable/ic_arrow_right" />
 
             <com.simplemobiletools.commons.views.MyTextView
                 android:id="@+id/color_picker_new_hex_label"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/colorpicker_items_height"
-                android:layout_alignBottom="@+id/color_picker_new_hex"
                 android:layout_alignTop="@+id/color_picker_new_hex"
-                android:layout_toRightOf="@+id/color_picker_hex_arrow"
+                android:layout_alignBottom="@+id/color_picker_new_hex"
+                android:layout_toEndOf="@+id/color_picker_hex_arrow"
                 android:gravity="center"
                 android:text="#"
-                android:textSize="@dimen/normal_text_size"/>
+                android:textSize="@dimen/normal_text_size" />
 
             <com.simplemobiletools.commons.views.MyEditText
                 android:id="@+id/color_picker_new_hex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/color_picker_new_hex_label"
+                android:layout_toEndOf="@+id/color_picker_new_hex_label"
                 android:digits="0123456789ABCDEFabcdef"
                 android:ems="5"
                 android:gravity="start"
                 android:lines="1"
                 android:maxLength="6"
                 android:textCursorDrawable="@null"
-                android:textSize="@dimen/normal_text_size"/>
+                android:textSize="@dimen/normal_text_size" />
 
         </RelativeLayout>
 
@@ -108,15 +107,15 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/colorpicker_items_height"
             android:layout_below="@id/color_picker_hex_codes_holder"
-            android:layout_marginBottom="@dimen/medium_margin"
-            android:layout_marginTop="@dimen/medium_margin">
+            android:layout_marginTop="@dimen/medium_margin"
+            android:layout_marginBottom="@dimen/medium_margin">
 
             <ImageView
                 android:id="@+id/color_picker_old_color"
                 android:layout_width="@dimen/colorpicker_color_width"
                 android:layout_height="match_parent"
-                android:layout_toLeftOf="@+id/color_picker_arrow"
-                android:background="@android:color/white"/>
+                android:layout_toStartOf="@+id/color_picker_arrow"
+                android:background="@android:color/white" />
 
             <ImageView
                 android:id="@+id/color_picker_arrow"
@@ -126,14 +125,14 @@
                 android:paddingLeft="@dimen/medium_margin"
                 android:paddingRight="@dimen/medium_margin"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_arrow_right"/>
+                android:src="@drawable/ic_arrow_right" />
 
             <ImageView
                 android:id="@+id/color_picker_new_color"
                 android:layout_width="@dimen/colorpicker_color_width"
                 android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/color_picker_arrow"
-                android:background="@android:color/white"/>
+                android:layout_toEndOf="@+id/color_picker_arrow"
+                android:background="@android:color/white" />
         </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
