--- a/commons/src/main/res/layout/dialog_filepicker.xml
+++ b/commons/src/main/res/layout/dialog_filepicker.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/filepicker_coordinator"
     android:layout_width="match_parent"
@@ -18,7 +17,7 @@
             android:paddingLeft="@dimen/activity_margin"
             android:paddingTop="@dimen/activity_margin"
             android:paddingRight="@dimen/activity_margin"
-            android:paddingBottom="@dimen/medium_margin"/>
+            android:paddingBottom="@dimen/medium_margin" />
 
         <com.simplemobiletools.commons.views.MyRecyclerView
             android:id="@+id/filepicker_list"
@@ -26,7 +25,7 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/filepicker_breadcrumbs"
             android:scrollbars="none"
-            app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager"/>
+            app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" />
 
         <com.simplemobiletools.commons.views.FastScroller
             android:id="@+id/filepicker_fastscroller"
@@ -39,7 +38,7 @@
             android:paddingStart="@dimen/normal_margin"
             android:paddingLeft="@dimen/normal_margin">
 
-            <include layout="@layout/fastscroller_handle_vertical"/>
+            <include layout="@layout/fastscroller_handle_vertical" />
 
         </com.simplemobiletools.commons.views.FastScroller>
     </RelativeLayout>
@@ -49,9 +48,9 @@
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="@dimen/activity_margin"
+        android:layout_marginEnd="@dimen/activity_margin"
         android:layout_marginBottom="@dimen/activity_margin"
-        android:src="@drawable/ic_unhide"/>
+        android:src="@drawable/ic_unhide" />
 
     <com.simplemobiletools.commons.views.MyFloatingActionButton
         android:id="@+id/filepicker_fab"
@@ -60,6 +59,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/activity_margin"
         android:src="@drawable/ic_plus"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
