--- a/commons/src/main/res/layout/dialog_purchase_thank_you.xml
+++ b/commons/src/main/res/layout/dialog_purchase_thank_you.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplemobiletools.commons.views.MyTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.simplemobiletools.commons.views.MyTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/purchase_thank_you"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -10,4 +9,4 @@
     android:paddingRight="@dimen/bigger_margin"
     android:paddingBottom="@dimen/normal_margin"
     android:text="@string/purchase_thank_you"
-    android:textSize="@dimen/bigger_text_size"/>
+    android:textSize="@dimen/bigger_text_size" />
