--- a/commons/src/main/res/layout/dialog_rename_item.xml
+++ b/commons/src/main/res/layout/dialog_rename_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rename_item_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +9,7 @@
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/rename_item_path"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <com.simplemobiletools.commons.views.MyEditText
         android:id="@+id/rename_item_name"
@@ -19,13 +18,13 @@
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/rename_item_extension_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/extension"/>
+        android:text="@string/extension" />
 
     <com.simplemobiletools.commons.views.MyEditText
         android:id="@+id/rename_item_extension"
@@ -34,6 +33,6 @@
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
 </LinearLayout>
