--- a/commons/src/main/res/layout/dialog_rename_items.xml
+++ b/commons/src/main/res/layout/dialog_rename_items.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rename_items_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +13,7 @@
         android:layout_marginBottom="@dimen/activity_margin"
         android:singleLine="true"
         android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size"/>
+        android:textSize="@dimen/normal_text_size" />
 
     <RadioGroup
         android:id="@+id/rename_items_radio_group"
@@ -28,7 +27,7 @@
             android:checked="true"
             android:paddingTop="@dimen/normal_margin"
             android:paddingBottom="@dimen/normal_margin"
-            android:text="@string/append_filenames"/>
+            android:text="@string/append_filenames" />
 
         <com.simplemobiletools.commons.views.MyCompatRadioButton
             android:id="@+id/rename_items_radio_prepend"
@@ -36,6 +35,6 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/normal_margin"
             android:paddingBottom="@dimen/normal_margin"
-            android:text="@string/prepend_filenames"/>
+            android:text="@string/prepend_filenames" />
     </RadioGroup>
 </LinearLayout>
