--- a/commons/src/main/res/layout/dialog_textview.xml
+++ b/commons/src/main/res/layout/dialog_textview.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplemobiletools.commons.views.MyTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.simplemobiletools.commons.views.MyTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/text_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_margin"
-    android:paddingRight="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
-    android:textSize="@dimen/normal_text_size"/>
+    android:paddingRight="@dimen/activity_margin"
+    android:textSize="@dimen/normal_text_size" />
