--- a/commons/src/main/res/layout/dialog_title.xml
+++ b/commons/src/main/res/layout/dialog_title.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplemobiletools.commons.views.MyTextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.simplemobiletools.commons.views.MyTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_title_textview"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingEnd="@dimen/activity_margin"
-    android:paddingLeft="@dimen/activity_margin"
-    android:paddingRight="@dimen/activity_margin"
     android:paddingStart="@dimen/activity_margin"
+    android:paddingLeft="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
+    android:paddingEnd="@dimen/activity_margin"
+    android:paddingRight="@dimen/activity_margin"
     android:textSize="@dimen/normal_text_size"
-    android:textStyle="bold"/>
+    android:textStyle="bold" />
