--- a/commons/src/main/res/layout/dialog_whats_new.xml
+++ b/commons/src/main/res/layout/dialog_whats_new.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/whats_new_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,21 +10,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_margin"
-        android:paddingRight="@dimen/activity_margin"
-        android:paddingTop="@dimen/activity_margin">
+        android:paddingTop="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin">
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/whats_new_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_margin"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/normal_text_size" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@drawable/divider"
-            android:paddingTop="@dimen/activity_margin"/>
+            android:paddingTop="@dimen/activity_margin" />
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/whats_new_disclaimer"
@@ -33,6 +32,6 @@
             android:layout_height="wrap_content"
             android:alpha="0.7"
             android:text="@string/whats_new_disclaimer"
-            android:textSize="@dimen/smaller_text_size"/>
+            android:textSize="@dimen/smaller_text_size" />
     </LinearLayout>
 </ScrollView>
