--- a/commons/src/main/res/layout/fastscroller_handle_horizontal.xml
+++ b/commons/src/main/res/layout/fastscroller_handle_horizontal.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
@@ -9,7 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:alpha="0"
-        android:background="@drawable/fastscroller_handle_horizontal"/>
+        android:background="@drawable/fastscroller_handle_horizontal" />
 
     <TextView
         android:id="@+id/fastscroller_bubble"
@@ -23,6 +22,6 @@
         android:padding="@dimen/medium_margin"
         android:singleLine="true"
         android:textSize="@dimen/normal_text_size"
-        tools:text="bubble"/>
+        tools:text="bubble" />
 
 </merge>
