--- a/commons/src/main/res/layout/fastscroller_handle_vertical.xml
+++ b/commons/src/main/res/layout/fastscroller_handle_vertical.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
@@ -9,7 +8,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:alpha="0"
-        android:background="@drawable/fastscroller_handle_vertical"/>
+        android:background="@drawable/fastscroller_handle_vertical" />
 
     <TextView
         android:id="@+id/fastscroller_bubble"
@@ -24,6 +23,6 @@
         android:padding="@dimen/medium_margin"
         android:singleLine="true"
         android:textSize="@dimen/normal_text_size"
-        tools:text="bubble"/>
+        tools:text="bubble" />
 
 </merge>
