--- a/commons/src/main/res/layout/license_faq_item.xml
+++ b/commons/src/main/res/layout/license_faq_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/license_faq_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,11 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/activity_margin"
-        android:textColor="@color/color_primary"/>
+        android:textColor="@color/color_primary" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/license_faq_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
