--- a/commons/src/main/res/layout/property_item.xml
+++ b/commons/src/main/res/layout/property_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/property_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_margin"
-        android:textSize="@dimen/smaller_text_size"/>
+        android:textSize="@dimen/smaller_text_size" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/property_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/small_margin"
-        android:paddingRight="@dimen/small_margin"/>
+        android:paddingRight="@dimen/small_margin" />
 
 </LinearLayout>
