--- a/commons/src/main/res/layout/tab_fingerprint.xml
+++ b/commons/src/main/res/layout/tab_fingerprint.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.simplemobiletools.commons.views.FingerprintTab
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.simplemobiletools.commons.views.FingerprintTab xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fingerprint_lock_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -10,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/activity_margin"
-        android:text="@string/add_fingerprint"/>
+        android:text="@string/add_fingerprint" />
 
     <ImageView
         android:id="@+id/fingerprint_image"
@@ -19,7 +18,7 @@
         android:layout_below="@+id/fingerprint_lock_title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/activity_margin"
-        android:src="@drawable/ic_fingerprint"/>
+        android:src="@drawable/ic_fingerprint" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/fingerprint_label"
@@ -31,7 +30,7 @@
         android:layout_marginRight="@dimen/activity_margin"
         android:gravity="center"
         android:padding="@dimen/activity_margin"
-        android:text="@string/place_finger"/>
+        android:text="@string/place_finger" />
 
     <com.simplemobiletools.commons.views.MyTextView
         android:id="@+id/fingerprint_settings"
@@ -41,6 +40,6 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/button_background"
         android:padding="@dimen/normal_margin"
-        android:text="@string/go_to_settings"/>
+        android:text="@string/go_to_settings" />
 
 </com.simplemobiletools.commons.views.FingerprintTab>
