--- a/commons/src/main/res/layout/filepicker_list_item.xml
+++ b/commons/src/main/res/layout/filepicker_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_holder"
     android:layout_width="match_parent"
@@ -16,7 +17,7 @@
         android:layout_height="@dimen/normal_icon_size"
         android:layout_centerVertical="true"
         android:padding="@dimen/medium_margin"
-        android:src="@drawable/ic_folder" />
+        app:srcCompat="@drawable/ic_folder" />
 
     <RelativeLayout
         android:layout_width="match_parent"
