adding a new dimension for creating shortcuts

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
 
     <dimen name="social_logo">40dp</dimen>
     <dimen name="color_sample_size">30dp</dimen>
+    <dimen name="shortcut_size">64dp</dimen>
     <dimen name="colorpicker_size">240dp</dimen>
     <dimen name="colorpicker_size_with_padding">272dp</dimen>
     <dimen name="colorpicker_hue_width">30dp</dimen>
