specify dialog theme text color explicitly, to fix date/time pickers

--- a/commons/src/main/res/values/styles.xml
+++ b/commons/src/main/res/values/styles.xml
@@ -48,11 +48,13 @@
     <style name="MyDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/color_primary</item>
         <item name="android:windowBackground">@color/theme_light_background_color</item>
+        <item name="android:textColor">@color/theme_light_text_color</item>
     </style>
 
     <style name="MyDialogTheme.Dark" parent="Theme.AppCompat.Dialog">
         <item name="colorAccent">@color/color_primary</item>
         <item name="android:windowBackground">@color/theme_dark_background_color</item>
+        <item name="android:textColor">@color/theme_dark_text_color</item>
     </style>
 
     <style name="Theme.Transparent" parent="Theme.AppCompat.Light.NoActionBar">
