replacing the facebook and reddit png icons with vectors

--- a/commons/src/main/res/layout/activity_about.xml
+++ b/commons/src/main/res/layout/activity_about.xml
@@ -110,7 +110,7 @@
             android:layout_width="@dimen/social_logo"
             android:layout_height="@dimen/social_logo"
             android:layout_below="@+id/about_follow_us"
-            android:src="@drawable/ic_facebook"/>
+            android:src="@drawable/ic_facebook_vector"/>
 
         <ImageView
             android:id="@+id/about_reddit"
@@ -120,8 +120,7 @@
             android:layout_marginLeft="@dimen/medium_margin"
             android:layout_marginRight="@dimen/medium_margin"
             android:layout_toEndOf="@+id/about_facebook"
-            android:layout_toRightOf="@+id/about_facebook"
-            android:src="@drawable/ic_reddit"/>
+            android:src="@drawable/ic_reddit_vector"/>
 
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/about_copyright"
