do not use different margin values at tablets

--- a/commons/src/main/res/values/dimens.xml
+++ b/commons/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
     <dimen name="tiny_margin">2dp</dimen>
     <dimen name="small_margin">4dp</dimen>
+    <dimen name="smaller_margin">6dp</dimen>
     <dimen name="medium_margin">8dp</dimen>
     <dimen name="normal_margin">12dp</dimen>
     <dimen name="activity_margin">16dp</dimen>
