show "Pro" in the app version at the About section

--- a/commons/src/main/res/values/donottranslate.xml
+++ b/commons/src/main/res/values/donottranslate.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="package_name">com.simplemobiletools.commons</string>
+    <string name="pro">Pro</string>
     <string name="simple_commons">Simple Commons</string>
     <string name="progress">%1$s / %2$s</string>
     <string name="donate_url">https://simplemobiletools.com/donate</string>
