renaming default_actionmode_color to dark_grey

--- a/commons/src/main/res/drawable/actionmenu_background.xml
+++ b/commons/src/main/res/drawable/actionmenu_background.xml
@@ -5,7 +5,7 @@
         android:right="-3dp"
         android:top="-3dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/default_actionmode_color" />
+            <solid android:color="@color/dark_grey" />
             <stroke
                 android:width="2dp"
                 android:color="?attr/colorPrimary" />
