--- a/commons/src/main/res/values/colors.xml
+++ b/commons/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="activated_item_foreground">#44888888</color>
     <color name="divider_grey">#40808080</color>
     <color name="gradient_grey_start">#CC000000</color>
-    <color name="default_actionmode_color">#FF383838</color>
+    <color name="dark_grey">#FF333333</color>
 
     <!-- Color Customization -->
     <color name="theme_light_text_color">@color/md_grey_600</color>
