updating some audio playback related icons, make them rounder

--- a/commons/src/main/res/drawable/ic_previous_vector.xml
+++ b/commons/src/main/res/drawable/ic_previous_vector.xml
@@ -1,12 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="m20.7592,18.1271 l-8.5,-6 8.5,-6z" />
+        android:pathData="M2.3958,11.0778 L10.5214,6.3865c0.155,-0.0895 0.3279,-0.1343 0.501,-0.1343 0.173,0 0.3459,0.0448 0.501,0.1343 0.31,0.1789 0.501,0.5097 0.501,0.8676l0,9.3827c0,0.358 -0.191,0.6887 -0.501,0.8676 -0.1549,0.0895 -0.328,0.1343 -0.501,0.1343 -0.173,0 -0.3459,-0.0447 -0.501,-0.1343L2.3959,12.813c-0.31,-0.1789 -0.501,-0.5097 -0.501,-0.8676 -0.0001,-0.358 0.191,-0.6887 0.5009,-0.8676z" />
     <path
         android:fillColor="#FFFFFF"
-        android:pathData="M12.1515,18.2788 L3.6515,12.2788 12.1515,6.2788Z" />
+        android:pathData="m12.1919,11.9454c0,-0.358 0.191,-0.6887 0.501,-0.8676l8.1257,-4.6913c0.1549,-0.0895 0.3279,-0.1343 0.501,-0.1343 0.173,0 0.3459,0.0448 0.501,0.1343 0.31,0.1789 0.501,0.5097 0.501,0.8676l0,9.3827c0,0.358 -0.191,0.6887 -0.501,0.8676 -0.155,0.0895 -0.328,0.1343 -0.501,0.1343 -0.173,0 -0.3459,-0.0447 -0.501,-0.1343l-8.1257,-4.6913c-0.3101,-0.1789 -0.501,-0.5096 -0.501,-0.8676z" />
 </vector>
