--- a/commons/src/main/res/drawable/ic_plus_vector.xml
+++ b/commons/src/main/res/drawable/ic_plus_vector.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="m13.3248,3.8 l-2.3935,-0.0127 0,7.1005 -7.0751,-0.0127 0,2.3935 7.0751,0 0,7.0751 2.3935,0 0,-7.0751 7.0751,0 0,-2.3935 -7.0751,0z"/>
+    android:viewportWidth="96"
+    android:viewportHeight="96">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="m73.0837,40.853 l-19.1491,-0.0021 -0.001,-17.7159c0.001,-3.3487 -2.7228,-6.0633 -6.0815,-6.0633 -3.3577,0 -6.0805,2.7146 -6.0805,6.0633l0,17.7169 -18.6408,-0.001c-3.3587,0.001 -6.0815,2.7157 -6.0815,6.0633 0.0021,3.3487 2.7228,6.0623 6.0815,6.0623l18.6408,0 0,19.9617c0,3.3517 2.7228,6.0633 6.0815,6.0633 3.3587,0 6.0805,-2.7146 6.0815,-6.0612l0,-19.9637 19.1512,0c3.3567,0 6.0795,-2.7136 6.0795,-6.0602 0.0031,-3.3507 -2.7228,-6.0653 -6.0815,-6.0633z" />
 </vector>
