--- a/commons/src/main/res/drawable/ic_cross_vector.xml
+++ b/commons/src/main/res/drawable/ic_cross_vector.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z"/>
+    android:viewportWidth="96"
+    android:viewportHeight="96">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M55.5708,48 L78.1392,25.4316c2.0726,-2.0726 2.0726,-5.4118 0,-7.4844 -2.0726,-2.0726 -5.4118,-2.0726 -7.4844,0L48.0864,40.5156 25.518,17.832c-2.0726,-2.0726 -5.4118,-2.0726 -7.4844,0 -1.0363,1.0363 -1.612,2.418 -1.612,3.7998 0,1.3817 0.5757,2.7635 1.612,3.7998L40.6019,48 17.9184,70.5684c-1.0363,1.0363 -1.612,2.418 -1.612,3.7998 0,1.3817 0.5757,2.7635 1.612,3.7998 2.0726,2.0726 5.4118,2.0726 7.4844,0L48.0864,55.4844 70.6548,78.0528c2.0726,2.0726 5.4118,2.0726 7.4844,0 2.0726,-2.0726 2.0726,-5.4118 0,-7.4844L55.5708,48Z" />
 </vector>
